# tcp-navigator

./: .flake8  LICENSE  README.md  config.ini  pyproject.toml
src/: configuration.py  constants.py
src/core/: client.py  server.py
src/core/helpers/: file_loader.py  logging_helper.py
src/tests/: test_client.py  test_configuration.py  test_file_loader.py  test_server.py  test_server_multithreading.py
src/tests/resources/: 100k.txt  10k.txt  50k.txt
ssl/cert/: cert.pem
ssl/key/: key.pem
