[tool.poetry]
name = "tcp-navigator"
version = "0.1.0"
description = "A high-performance, concurrent TCP server with secure, efficient text searching capabilities."
authors = ["kenato254 <kenedygitonga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
mypy = "^1.13.0"
isort = "^5.13.2"
pytest-mock = "^3.14.0"

[tool.black]
line-length = 75
skip-string-normalization = true


[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "src.core.server:main"
start-client = "src.core.client:main"
